# PersonalDockerProject1

./: .env-example  docker-compose.yaml
backend/: Dockerfile  pyproject.toml
backend/app/: alembic.ini  main.py  settings.py
backend/app/apps/auth/: auth_handler.py  password_handler.py
backend/app/apps/core/: base_crud.py  base_model.py  dependencies.py
backend/app/apps/users/: crud.py  models.py  routers.py  schemas.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 2025_11_20_1819-00939161cff5_initial_migration.py
frontend/: Dockerfile  pyproject.toml
frontend/app/: main.py  router_user.py
frontend/app/templates/: base.html
frontend/app/templates/components/: auth.html  navbar.html
frontend/app/templates/pages/: register.html
